# SimTown

./: CMakeLists.txt  SimTown  Storey.cpp  building.cpp  main.cpp  package.json  street.cpp
.github/workflows/: CI.yml  main.yml
include/class/: MyVector.h  MyVector.hpp  building.h  globals.h  storey.h
mains/: CMakeLists.txt  SimTown.cpp
src/class/: CMakeLists.txt  building.cpp  globals.cpp  resident.cpp  storey.cpp
tab pointer version/: SimTown  building.cpp  main.cpp  street.cpp
tests/: CMakeLists.txt  test_building.cpp
